Auto Smooth option conflicts with uvs #68954

Closed
opened 2019-08-21 09:05:26 +02:00 by Massimiliano Puliero · 10 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60

Blender Version
Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-20 22:35, hash: daba3e871f

Short description of error
The bug appear only when -Auto Smooth- is turned on.
Part of the UVs are marked such as they are pinned and also there is not visual feedback on what is selected and what is not.
Turn on -UV Sync Selection- solve the problem of showing what is selected and what's not, but still mosto of the vertices look pinned.

Exact steps for others to reproduce the error
turn on and off the -Auto Smooth- option to see the difference.

Thank you

uv_error.blend
uv_display.jpg

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60 **Blender Version** Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-20 22:35, hash: `daba3e871f` **Short description of error** The bug appear only when -Auto Smooth- is turned on. Part of the UVs are marked such as they are pinned and also there is not visual feedback on what is selected and what is not. Turn on -UV Sync Selection- solve the problem of showing what is selected and what's not, but still mosto of the vertices look pinned. **Exact steps for others to reproduce the error** turn on and off the -Auto Smooth- option to see the difference. Thank you [uv_error.blend](https://archive.blender.org/developer/F7678058/uv_error.blend) ![uv_display.jpg](https://archive.blender.org/developer/F7678059/uv_display.jpg)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

#69137 was marked as duplicate of this issue

#69137 was marked as duplicate of this issue

#69035 was marked as duplicate of this issue

#69035 was marked as duplicate of this issue
Philipp Oeser changed title from suto smooth option conflicts with uvs to Auto Smooth option conflicts with uvs 2019-08-21 11:45:52 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Looks like this is also caused by 9c010c44f4.
Not sure if this is really a candidate, but since this can make the UV Editor basically unusable, will dare setting it to High...

Looks like this is also caused by 9c010c44f4. Not sure if this is really a candidate, but since this can make the UV Editor basically unusable, will dare setting it to High...
Member

Added subscriber: @FrancoisRimasson

Added subscriber: @FrancoisRimasson
Clément Foucault was assigned by Philipp Oeser 2019-08-22 20:56:38 +02:00
Member

Added subscribers: @Kent-Davis, @AbidMaqbool

Added subscribers: @Kent-Davis, @AbidMaqbool

This issue was referenced by 1a6491639a

This issue was referenced by 1a6491639a8b14ec59aa8b54e9d46d7b0cb7f5ff

@lichtwerk Thanks.

@lichtwerk Thanks.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68954
No description provided.