Fix T68954 UVEdit: Auto Smooth option conflicts with uvs display